--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage": "https://cit007.github.io/movie_app_cit007/"
+  "homepage": "https://cit007.github.io/movie_app_cit007/"
 }
